--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/eccrypto": "^1.1.6",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.460.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "openpgp": "^6.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
