--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "@types/eccrypto": "^1.1.6",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "eccrypto": "^1.1.6",
     "ethers": "^6.14.4",
+    "framer-motion": "^12.23.6",
     "googleapis": "^150.0.1",
     "lucide-react": "^0.460.0",
+    "motion": "^12.23.6",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -25,7 +29,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.52.1",
     "react-transliterate": "^1.1.9",
-    "tailwind-merge": "^2.5.4",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.6.0",
+    "three": "^0.178.0",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
