--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/eccrypto": "^1.1.6",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "eccrypto": "^1.1.6",
